--- a/src/template/delete.fxml
+++ b/src/template/delete.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.deleteController">
+<AnchorPane id="anchorBG" prefHeight="200.0" prefWidth="200.0" stylesheets="@makeUp.css" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="template.deleteController">
     <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="194.0" layoutY="254.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="575.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="196.0" layoutY="190.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="575.0" />
@@ -63,7 +63,7 @@
         <Button fx:id="renameScreenBtn" layoutY="65.0" mnemonicParsing="false" onAction="#goToRename" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" />
         <Button fx:id="deleteScreenBtn" layoutY="241.0" mnemonicParsing="false" prefHeight="118.0" prefWidth="126.0" styleClass="activeScreenButton" textFill="WHITE" />
         <Button fx:id="optionsScreenBtn" layoutY="413.0" mnemonicParsing="false" onAction="#goToOptions" prefHeight="118.0" prefWidth="126.0" styleClass="screenButton" textFill="WHITE" />
-        <Button fx:id="deleteFilesBtn" layoutX="315.0" layoutY="512.0" mnemonicParsing="false" onAction="#deleteBtnTrigger" text="Reccomend Files for Deletion" />
+        <Button fx:id="deleteFilesBtn" layoutX="315.0" layoutY="512.0" mnemonicParsing="false" onAction="#deleteBtnTrigger" text="Recommend Files for Deletion" />
         <Label layoutX="198.0" layoutY="228.0" prefHeight="26.0" prefWidth="319.0" text="Finding files that haven't been touched since:" textAlignment="CENTER" textFill="WHITE">
             <font>
                 <Font size="15.0" />
